--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 	<description>Maven wagon support for s3:// urls</description>
 
 	<properties>
-		<maven.compiler.source>9</maven.compiler.source>
-		<maven.compiler.target>9</maven.compiler.target>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 
 		<amazonaws.version>1.11.534</amazonaws.version>
 		<junit.version>4.11</junit.version>
@@ -90,8 +91,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.9</source>
-					<target>1.9</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
